Bug 391426 - Incoming chat request appears in wrong category, text doesn't show
Summary: Incoming chat request appears in wrong category, text doesn't show
Status: RESOLVED FIXED
Alias: None
Product: Ruqola
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Laurent Montel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-05 12:29 UTC by David Faure
Modified: 2018-03-07 08:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2018-03-05 12:29:05 UTC
Someone contacted me by private message, who hadn't contacted me before (so, no entry on the left yet).

The entry was created in the wrong section, at the bottom, between the "restricted" channels, instead of being in the middle of the other private chats.

Also, the person had no icon on the left.

Also, the text that the person wrote, didn't appear in the chat! I only saw it via the notification. The messages list was completely empty, my own reply didn't appear either.

After quitting + restarting ruqola, everything appears as it should.
Comment 1 Laurent Montel 2018-03-05 13:00:59 UTC
Yep known bug.
I work to create full autotest for insert room/update room etc.
I will be able to catch all theses bugs soon.
Comment 2 Laurent Montel 2018-03-07 07:17:00 UTC
Git commit 5c2e77b0b7f968a72533c23732a4a8d8a90b200c by Laurent Montel.
Committed on 07/03/2018 at 07:15.
Pushed by mlaurent into branch 'master'.

Start to fix load room when we never open a specific room

M  +3    -4    src/model/roommodel.cpp
M  +4    -0    src/rocketchatbackend.cpp

https://commits.kde.org/ruqola/5c2e77b0b7f968a72533c23732a4a8d8a90b200c
Comment 3 Laurent Montel 2018-03-07 08:18:22 UTC
Git commit 7270d73abc30b45ddfdc62a485898cc8d3360f36 by Laurent Montel.
Committed on 07/03/2018 at 08:17.
Pushed by mlaurent into branch 'master'.

Fix Bug 391426 - Incoming chat request appears in wrong category, text doesn't show

I need to create an autotest for it

M  +4    -1    src/room.cpp

https://commits.kde.org/ruqola/7270d73abc30b45ddfdc62a485898cc8d3360f36