Fix Bug 391426 - Incoming chat request appears in wrong category, text doesn't show

BUG: 391426

I need to create an autotest for it